// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleTimestamp should render a 'created' Timestamp correctly 1`] = `
.c1 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c1:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin-left: 0%;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0 "
  dir="ltr"
>
  <time
    class="c1"
    datetime="2018-07-07"
  >
    7 July 2018
  </time>
</div>
`;

exports[`ArticleTimestamp should render both a 'created' and an 'updated' Timestamp correctly 1`] = `
.c1 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c1:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin-left: 0%;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0 "
  dir="ltr"
>
  <time
    class="c1"
    datetime="2018-07-07"
  >
    7 July 2018
  </time>
  <div>
    <time
      class="c1"
      datetime="2019-03-15"
    >
      Updated 15 March 2019
    </time>
  </div>
</div>
`;

exports[`ArticleTimestamp should render with a prefix 1`] = `
.c1 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c1:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin-left: 0%;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0 "
  dir="ltr"
>
  <time
    class="c1"
    datetime="2018-07-07"
  >
    7 julio 2018
  </time>
  <div>
    <time
      class="c1"
      datetime="2019-03-15"
    >
      Actualizado 15 marzo 2019
    </time>
  </div>
</div>
`;

exports[`ArticleTimestamp should render with a suffix 1`] = `
.c1 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #6E6E73;
  display: block;
  font-family: Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c1:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin-left: 0%;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0 "
  dir="ltr"
>
  <time
    class="c1"
    datetime="2018-07-07"
  >
    ७ जुलाई २०१८
  </time>
  <div>
    <time
      class="c1"
      datetime="2019-03-15"
    >
      १५ मार्च २०१९ अद्यावधिक
    </time>
  </div>
</div>
`;

exports[`ArticleTimestamp should render with no suffix or prefix 1`] = `
.c1 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c1:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin-left: 0%;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0 "
  dir="ltr"
>
  <time
    class="c1"
    datetime="2018-07-07"
  >
    7 julio 2018
  </time>
</div>
`;
